# Practical-Rust-Projects-2nd-ed.

./: LICENSE.txt  README.md
ch5-catdex-api/catdex-api/: Cargo.toml  cert.pem  key-no-password.pem  key.pem
ch6-serverless-hello-world/serverless-hello-world/: Cargo.toml
ch6-serverless-hello-world/serverless-hello-world/src/: main.rs
ch8-rpi/physical/archive/: button.rs  flash.rs  led_button.rs  led_button_pull_up.rs  onoff.rs
ch8-rpi/physical/blink-cross-compile/: Cargo.toml  README.md
ch8-rpi/physical/blink-cross-compile/src/: main.rs
ch8-rpi/physical/physical-computing/: Cargo.toml  README.md
ch8-rpi/physical/physical-computing/examples/: led-on.rs  manual-blink.rs
example_code_v2/practical_rust_v2/cli/: README.md
example_code_v2/practical_rust_v2/cli/catsay/: Cargo.toml  stderr.txt  stdout.txt
example_code_v2/practical_rust_v2/rest_api/catdex/: Cargo.toml  README.md
example_code_v2/practical_rust_v2/rest_api/catdex/examples/: dynamic.rs  hello_world.rs  static_dir.rs  static_file.rs
example_code_v2/practical_rust_v2/rest_api/catdex/static/: template_example.html
notes/notes/: Practical Rust Project v2 content changes.md  Practical Rust Projects, 2nd edition.md  Style Guide.md  To-Do and Questions for Practical Rust Projects v2.md
