[package]
name = "catdex-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = { version = "4.3.1", features = ["openssl"] }
awmp = "0.8.1"
derive_more = "0.99.17"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
env_logger = "0.10.0"
handlebars = { version = "4.3.5", features = ["dir_source"] }
log = "0.4.17"
openssl = "0.10.49"
r2d2 = "0.8.10"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.89"
validator = { version = "0.16.0", features = ["derive"] }
