[package]
name = "catdex"
version = "0.1.0"
authors = ["Shing Lyu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features = ["openssl"] }
actix-files = "0.6.2"
serde_json = "1.0.82"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
serde = { version = "1.0.140", features = ["derive"] }
r2d2 = "0.8.10"
validator = "0.16.0"
validator_derive = "0.16.0"
derive_more = "0.99.17"
env_logger = "0.9.0"
log = "0.4.17"
openssl = "0.10.41"
actix-rt = "2.7.0"
handlebars = { version = "4.3.3", features = ["dir_source"] } 
